@@ -1,4 +1,5 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
+10152013 -> jonnyboy -> updated python script for category in pp additional
 10142013 -> jonnyboy -> added update to nzbstatus
                         fixed a few bugs
 10132013 -> jonnyboy -> allow requestid to work with relnamestatus 0 and 1
